fix: button overflow in mobile by changing flex direction (#7)
* Fixed button overflowing in mobile

* fix: button overflow in mobile by changing flex direction

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1458,6 +1458,10 @@ img {
     padding-right: 1.4rem;
   }
 
+  .btn {
+    width: 100%;
+  }
+
   .home-hero__actions,
   .page-header__actions,
   .home-community__actions,
@@ -1476,6 +1480,14 @@ img {
 
   .job-row__action {
     justify-self: start;
+  }
+
+  .home-alert__strip {
+    flex-direction: column;
+  } 
+
+  .home-alert__mark {
+    display: none;
   }
 }
 
